--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Terencesun/nayo#readme",
   "dependencies": {
+    "mocha": "^5.2.0",
     "mongodb": "^3.1.10"
   },
   "devDependencies": {
