--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/Terencesun/nayo#readme",
   "dependencies": {
     "mocha": "^5.2.0",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "should": "^13.2.3"
