--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nayo",
   "version": "1.0.0",
-  "description": "nayo is the simple DAO for mongoDB by nodejs",
+  "description": "nayo is the operation interfaces for mongoDB by nodejs",
   "main": "index.js",
   "directories": {
     "lib": "lib",
@@ -27,11 +27,11 @@
   },
   "homepage": "https://github.com/Terencesun/nayo#readme",
   "dependencies": {
-    "mocha": "^5.2.0",
     "mongodb": "^3.1.10",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "mocha": "^5.2.0",
     "should": "^13.2.3"
   }
 }
