--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "nayo",
-  "version": "1.1.2",
+  "version": "1.5.0",
   "description": "nayo is the operation interfaces for mongoDB by nodejs",
   "main": "index.js",
   "directories": {
     "lib": "lib",
     "test": "tests"
   },
-  "scripts": {
-    "test": "mocha ./tests/test.js --require ./tests/env.js"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Terencesun/nayo.git"
